--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@types/babel__traverse": "^7.20.7",
     "commitlint": "^19.7.1",
+    "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
     "turbo": "^2.5.0"
@@ -30,5 +31,6 @@
     "minimatch": "^10.0.3",
     "node-machine-id": "^1.1.12"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.12.3",
+  "optionalDependencies": {}
 }
