--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,10 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
       - name: Install dependencies
         run: pnpm install
@@ -51,7 +53,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
@@ -71,7 +75,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
@@ -85,15 +91,15 @@ jobs:
     name: Build Vite Demo
     runs-on: ubuntu-latest
     needs: setup
-    env:
-    LINGODOTDEV_API_KEY: ${{ secrets.LINGODOTDEV_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
@@ -113,7 +119,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
@@ -133,7 +141,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
@@ -158,7 +168,9 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: npm install -g pnpm
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
