--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Cache Turborepo
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
       - name: Upload node_modules for reuse
         uses: actions/upload-artifact@v4
         with:
@@ -35,21 +43,13 @@ jobs:
             packages/**/node_modules
             demo/**/node_modules
 
-      - name: Upload Turbo Cache
-        uses: actions/upload-artifact@v4
-        with:
-          name: turbo-cache
-          path: .turbo
-
   build-cli:
     name: Build CLI
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -59,10 +59,13 @@ jobs:
         with:
           name: node_modules
 
-      - uses: actions/download-artifact@v4
+      - name: Restore turbo cache
+        uses: actions/cache@v4
         with:
-          name: turbo-cache
           path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
 
       - run: cd packages/cli && pnpm build
 
@@ -72,23 +75,21 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
-
-      - uses: actions/download-artifact@v4
+      - name: Restore turbo cache
+        uses: actions/cache@v4
         with:
-          name: turbo-cache
           path: .turbo
-
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
       - run: cd demo/next-app && pnpm build
 
   build-vite-project:
@@ -97,23 +98,21 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
-
-      - uses: actions/download-artifact@v4
+      - name: Restore turbo cache
+        uses: actions/cache@v4
         with:
-          name: turbo-cache
           path: .turbo
-
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
       - run: cd demo/vite-project && pnpm build
 
   build-react:
@@ -122,23 +121,21 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
-
-      - uses: actions/download-artifact@v4
+      - name: Restore turbo cache
+        uses: actions/cache@v4
         with:
-          name: turbo-cache
           path: .turbo
-
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
       - run: cd packages/react && pnpm build
 
   build-sdk:
@@ -147,23 +144,21 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
-
-      - uses: actions/download-artifact@v4
+      - name: Restore turbo cache
+        uses: actions/cache@v4
         with:
-          name: turbo-cache
           path: .turbo
-
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
       - run: cd packages/sdk && pnpm build
 
   test:
@@ -177,16 +172,19 @@ jobs:
       - build-sdk
     steps:
       - uses: actions/checkout@v4
-
       - uses: pnpm/action-setup@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
       - uses: actions/download-artifact@v4
         with:
           name: node_modules
-
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
       - run: pnpm test || echo "No test script found"
