--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
-    "turbo": "^2.5.0"
+    "turbo": "^2.5.8"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.5.0",
@@ -31,6 +31,5 @@
     "minimatch": "^10.0.3",
     "node-machine-id": "^1.1.12"
   },
-  "packageManager": "pnpm@9.12.3",
-  "optionalDependencies": {}
+  "packageManager": "pnpm@9.12.3"
 }
