--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lingo.dev",
+  "name": "@lingo.dev/_spec",
   "type": "module",
   "scripts": {
     "prepare": "husky",
@@ -12,10 +12,10 @@
     "format:check": "prettier . --check"
   },
   "devDependencies": {
-    "@babel/generator": "^7.27.1",
-    "@babel/parser": "^7.27.1",
-    "@babel/traverse": "^7.27.4",
-    "@babel/types": "^7.27.1",
+    "@babel/generator": "^7.28.5",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/babel__traverse": "^7.20.7",
