--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -41,10 +41,10 @@
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/groq": "^1.2.3",
     "@ai-sdk/mistral": "^1.2.8",
-    "@babel/generator": "^7.26.5",
-    "@babel/parser": "^7.26.7",
-    "@babel/traverse": "^7.27.4",
-    "@babel/types": "^7.26.7",
+    "@babel/generator": "^7.28.5",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@lingo.dev/_sdk": "workspace:*",
     "@lingo.dev/_spec": "workspace:*",
     "@openrouter/ai-sdk-provider": "^0.7.1",
@@ -55,13 +55,13 @@
     "fast-xml-parser": "^5.0.8",
     "ini": "^5.0.0",
     "lodash": "^4.17.21",
+    "node-machine-id": "^1.1.12",
     "object-hash": "^3.0.0",
     "ollama-ai-provider": "^1.2.0",
+    "posthog-node": "^5.5.1",
     "prettier": "^3.4.2",
     "unplugin": "^2.1.2",
-    "zod": "^3.25.76",
-    "posthog-node": "^5.5.1",
-    "node-machine-id": "^1.1.12"
+    "zod": "^3.25.76"
   },
   "packageManager": "pnpm@9.12.3"
 }
