--- a/demo/react-router-app/tsconfig.json
+++ b/demo/react-router-app/tsconfig.json
@@ -8,9 +8,9 @@
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["node", "vite/client"],
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "bundler",
+    "target": "ESNext",                        
+    "module": "ESNext",                         
+    "moduleResolution": "Bundler",             
     "jsx": "react-jsx",
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
@@ -18,6 +18,7 @@
       "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,       
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "resolveJsonModule": true,
