spec and sdk added in tsconfig.json

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -16,6 +16,8 @@
     "baseUrl": ".", 
     "paths": {
       "@lingo.dev/*":["../*/src"],
+       "@lingo.dev/_spec": ["../spec/src"],
+       "@lingo.dev/_sdk": ["../sdk/src"],
       "@lingo.dev/_react/client": ["../react/src/client"],
       "@lingo.dev/_react/react-router": ["../react/src/react-router"],
       "@lingo.dev/_react/rsc": ["../react/src/rsc"]
