--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -16,8 +16,8 @@
     "baseUrl": ".", 
     "paths": {
       "@lingo.dev/*":["../*/src"],
-      "@lingo.dev/_compiler": ["../_compiler/src"],
-      "@lingo.dev/_locales": ["../_locales/src"],
+      "@lingo.dev/_compiler": ["../compiler/src"],
+      "@lingo.dev/_locales": ["../locales/src"],
       "@lingo.dev/_react": ["../react/src"],
        "@lingo.dev/_spec": ["../spec/src"],
        "@lingo.dev/_sdk": ["../sdk/src"],
