--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,17 +34,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      # - name: Upload node_modules for reuse
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: node_modules
-      #     path: |
-      #       node_modules
-      #       packages/**/node_modules
-      #       demo/**/node_modules
-
-  build-cli:
-    name: Build CLI
+  build-react:
+    name: Build React Package
     runs-on: ubuntu-latest
     needs: setup
     steps:
@@ -55,9 +46,31 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
+      - run: cd packages/react && pnpm build
+
+  build-compiler:
+    name: Build Compiler Package
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
       - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
       - name: Restore turbo cache
@@ -67,11 +80,10 @@ jobs:
           key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-turbo-
+      - run: cd packages/compiler && pnpm build
 
-      - run: cd packages/cli && pnpm build
-
-  build-next-app:
-    name: Build Next.js Demo
+  build-locale-codes:
+    name: Build Locale Codes Package
     runs-on: ubuntu-latest
     needs: setup
     steps:
@@ -81,9 +93,76 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/locale-codes && pnpm build
+
+  build-sdk:
+    name: Build SDK Package
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-compiler, build-locale-codes]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/sdk && pnpm build
+
+  build-cli:
+    name: Build CLI
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-compiler, build-sdk, build-locale-codes]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/cli && pnpm build
+
+  build-next-app:
+    name: Build Next.js Demo
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-sdk, build-cli]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
       - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
       - name: Restore turbo cache
@@ -98,7 +177,7 @@ jobs:
   build-vite-project:
     name: Build Vite Demo
     runs-on: ubuntu-latest
-    needs: setup
+    needs: [setup, build-react, build-sdk, build-cli]
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -106,9 +185,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
+
       - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
       - name: Restore turbo cache
@@ -120,56 +197,6 @@ jobs:
             ${{ runner.os }}-turbo-
       - run: cd demo/vite-project && pnpm build
 
-  build-react:
-    name: Build React Package
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
-      - name: Recreate pnpm symlinks from cache
-        run: pnpm install --frozen-lockfile
-      - name: Restore turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-      - run: cd packages/react && pnpm build
-
-  build-sdk:
-    name: Build SDK Package
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
-      - name: Recreate pnpm symlinks from cache
-        run: pnpm install --frozen-lockfile
-      - name: Restore turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-      - run: cd packages/sdk && pnpm build
-
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -179,6 +206,8 @@ jobs:
       - build-vite-project
       - build-react
       - build-sdk
+      - build-compiler
+      - build-locale-codes
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -186,9 +215,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      # - uses: actions/download-artifact@v4
-      #   with:
-      #     name: node_modules
+
       - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
       - name: Restore turbo cache
