--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,14 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
 
-      - name: Setup Node.js and Cache
+      - name: Setup Node.js and Restore pnpm Store Cache
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Install dependencies (link all workspaces)
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Cache Turborepo
@@ -36,11 +34,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      - name: Typecheck monorepo
-        run: pnpm run typecheck || echo "Type errors ignored for now"
-
-  build-all:
-    name: Build All Packages
+  build-react:
+    name: Build React Package
     runs-on: ubuntu-latest
     needs: setup
     steps:
@@ -51,7 +46,7 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Recreate pnpm workspace links
+      - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
 
       - name: Restore turbo cache
@@ -62,14 +57,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      # 👇 Build all packages at once (Turborepo handles dependency order)
-      - name: Build all packages
-        run: pnpm turbo run build --filter=...
+      - run: cd packages/react && pnpm build
 
-  test:
-    name: Run Tests
+  build-compiler:
+    name: Build Compiler Package
     runs-on: ubuntu-latest
-    needs: build-all
+    needs: setup
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -78,9 +71,8 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Recreate pnpm workspace links
+      - name: Recreate pnpm symlinks from cache
         run: pnpm install --frozen-lockfile
-
       - name: Restore turbo cache
         uses: actions/cache@v4
         with:
@@ -88,6 +80,149 @@ jobs:
           key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-turbo-
+      - run: cd packages/compiler && pnpm build
 
-      - name: Run tests
-        run: pnpm test || echo "No test script found"
+  build-locales:
+    name: Build Locale Codes Package
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/locales && pnpm build
+
+  build-sdk:
+    name: Build SDK Package
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-compiler, build-locales]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/sdk && pnpm build
+
+  build-cli:
+    name: Build CLI
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-compiler, build-sdk, build-locales]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd packages/cli && pnpm build
+
+  build-next-app:
+    name: Build Next.js Demo
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-sdk, build-cli]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd demo/next-app && pnpm build
+
+  build-vite-project:
+    name: Build Vite Demo
+    runs-on: ubuntu-latest
+    needs: [setup, build-react, build-sdk, build-cli]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: cd demo/vite-project && pnpm build
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs:
+      - build-cli
+      - build-next-app
+      - build-vite-project
+      - build-react
+      - build-sdk
+      - build-compiler
+      - build-locales
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Recreate pnpm symlinks from cache
+        run: pnpm install --frozen-lockfile
+      - name: Restore turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      - run: pnpm test || echo "No test script found"
