--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "build",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -14,8 +12,21 @@
     "moduleResolution": "Bundler",
     "module": "ESNext",
     "target": "ESNext",
-    "allowUnreachableCode": true
+    "allowUnreachableCode": true,
+    "baseUrl": ".",
+    "paths": {
+      "@lingo.dev/*":["../*/src"],
+      
+      "@lingo.dev/_spec": ["../spec/src"],
+      "@lingo.dev/_sdk": ["../sdk/src"],
+      "@lingo.dev/_locales": ["../locales/src"],
+      "@lingo.dev/_react": ["../react/src"],
+      
+      "@lingo.dev/_react/client": ["../react/src/client"],
+      "@lingo.dev/_react/react-router": ["../react/src/react-router"],
+      "@lingo.dev/_react/rsc": ["../react/src/rsc"]
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "types"],
   "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
