--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -13,22 +13,29 @@
     "module": "ESNext",
     "target": "ESNext",
     "allowUnreachableCode": true,
-    "baseUrl": ".", 
+    "baseUrl": ".",
     "paths": {
-      "@lingo.dev/_react": ["../react/src"], 
-      
+      "@lingo.dev/*": ["../*/src"],
+
       "@lingo.dev/_spec": ["../spec/src"],
       "@lingo.dev/_sdk": ["../sdk/src"],
       "@lingo.dev/_compiler": ["../compiler/src"],
       "@lingo.dev/_locales": ["../locales/src"],
+      "@lingo.dev/_react": ["../react/src"], 
 
       "@lingo.dev/_react/client": ["../react/src/client"],
       "@lingo.dev/_react/react-router": ["../react/src/react-router"],
-      "@lingo.dev/_react/rsc": ["../react/src/rsc"],
-      
-      "@lingo.dev/*":["../*/src"]
+      "@lingo.dev/_react/rsc": ["../react/src/rsc"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "types"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
+  "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"],
+
+  "references": [
+    { "path": "../compiler" },
+    { "path": "../locales" },
+    { "path": "../react" },
+    { "path": "../sdk" },
+    { "path": "../spec" }
+  ]
 }
