setting composite true in all tsconfig inside packages of cli

--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -14,6 +14,7 @@
     "target": "ESNext",
     "allowUnreachableCode": true,
     "baseUrl": ".",
+    "composite": true,
     "paths": {
       "@lingo.dev/*":["../*/src"],
       
