--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -15,6 +15,7 @@
     "allowUnreachableCode": true,
 
     "baseUrl": ".", 
+    "composite": true,
     "paths": {
       "@lingo.dev/*":["../*/src"],
       
