--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -25,7 +25,8 @@
     "src/**/*.tsx",
     "types",
     "../spec/src/**/*.ts",
-    "../sdk/src/**/*.ts"
+    "../sdk/src/**/*.ts",
+    "src/*.ts"
   ],
   "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
