--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -21,12 +21,13 @@
     }
   },
   "include": [
-    "src/**/*.ts",
+    "src/*.ts",
+    "src/lib/**/*.ts",
+    "src/utils/**/*.ts",
     "src/**/*.tsx",
     "types",
     "../spec/src/**/*.ts",
-    "../sdk/src/**/*.ts",
-    "src/*.ts"
+    "../sdk/src/**/*.ts"
   ],
   "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
